--- a/src/CSS Modules/signup.module.css
+++ b/src/CSS Modules/signup.module.css
@@ -57,5 +57,5 @@
 .submit button:hover {
   color: #333333;
   background-color: #F2F2F2;
-  border: 2px solid #519e8a;
+  border: 2px solid #D91F27;
 }
