--- a/src/CSS Modules/navbar.module.css
+++ b/src/CSS Modules/navbar.module.css
@@ -2,3 +2,20 @@
   width: 100%;
   background-color: #F2F2F2;
 }
+
+.nav button {
+  background-color: #333333;
+  color: #F2F2F2;
+  letter-spacing: 1px;
+  margin-bottom: 0.25em;
+  border-radius: 20px;
+  border: 2px solid #333333;
+}
+
+.nav button:hover {
+  color: #333333;
+  background-color: #F2F2F2;
+  border: 2px solid #D91F27;
+  border-radius: 20px;
+  letter-spacing: 1px;
+}
