--- a/src/CSS Modules/admin.module.css
+++ b/src/CSS Modules/admin.module.css
@@ -10,3 +10,35 @@
   border: 1px solid #333333;
   border-radius: 5px;
 }
+
+.submit button {
+  background-color: #333333;
+  color: #F2F2F2;
+  width: 35%;
+  margin-top: 1em;
+  padding: 8px 0px;
+  font-size: 1em;
+  font-weight: lighter;
+  letter-spacing: 1px;
+  margin-bottom: 0.25em;
+  border-radius: 20px;
+}
+
+.submit button:hover {
+  color: #333333;
+  background-color: #F2F2F2;
+  border: 2px solid #D91F27;
+}
+
+.addteam {
+  width: 30%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  padding: 10px 10px;
+  border-radius: 10px;
+  box-shadow: 0px 10px 200px #555;
+  background-color: #ffffff;
+  align-items: center;
+  text-align: center;
+}
