--- a/src/CSS Modules/home.module.css
+++ b/src/CSS Modules/home.module.css
@@ -1,9 +1,26 @@
 .header {
-  justify-content: center;
+  font-size: 75px;
+  text-align: center;
+  padding-top: .4cm;
+}
+
+.footer {
+  text-align: center;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.line {
   align-items: center;
+  width: 80%;
+  border: 1px solid #333333;
+  border-radius: 5px;
+}
+
+.imagebox {
   text-align: center;
 }
 
-.body {
-  
+.image {
+  width: 80%;
 }
