--- a/src/CSS Modules/admin.module.css
+++ b/src/CSS Modules/admin.module.css
@@ -11,7 +11,61 @@
   border-radius: 5px;
 }
 
-.submit button {
+.formheader{
+  padding-bottom: 15px;
+}
+
+.submit {
+  position: relative;
+}
+
+.submit input {
+  width: 100%;
+  height: 100%;
+  padding-top: 20px;
+  border: none;
+  outline: none;
+}
+
+.submit label {
+  position: absolute;
+  bottom: 0px;
+  left: 0%;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  border-bottom: 1px solid #333333;
+  text-align: left;
+}
+
+.submit label::after {
+  content: '';
+  position: absolute;
+  left: 0px;
+  bottom: -2px;
+  height: 100%;
+  width: 100%;
+  border-bottom: 3px solid #D91F27;
+  transform: translateX(-100%);
+  transition: all 0.5s ease;
+}
+
+.contentname {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  transition: all 0.5s ease;
+}
+
+.submit input:focus + .labelname .contentname, .submit input:valid + .labelname .contentname{
+  transform: translateY(-100%);
+}
+
+.submit input:focus + .labelname::after, .submit input:valid + .labelname::after{
+  transform: translateX(0%);
+}
+
+.submitbutton {
   background-color: #333333;
   color: #F2F2F2;
   width: 35%;
@@ -24,7 +78,7 @@
   border-radius: 20px;
 }
 
-.submit button:hover {
+.submitbutton:hover {
   color: #333333;
   background-color: #F2F2F2;
   border: 2px solid #D91F27;
