--- a/src/CSS Modules/home.module.css
+++ b/src/CSS Modules/home.module.css
@@ -1,7 +1,8 @@
 .header {
   font-size: 75px;
   text-align: center;
-  padding-top: .4cm;
+  padding-top: .5cm;
+  bottom: 0;
 }
 
 .footer {
@@ -23,4 +24,10 @@
 
 .image {
   width: 80%;
+  border-radius: 10px;
+}
+
+.logo{
+  height:10%;
+  width: 10%;
 }
