--- a/src/CSS Modules/admin.module.css
+++ b/src/CSS Modules/admin.module.css
@@ -11,10 +11,77 @@
   border-radius: 5px;
 }
 
-.submit button {
+.addteam {
+  width: 30%;
+  height: 20vh;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  border-radius: 12px;
+  box-shadow: 0px 10px 200px #555;
+  background-color: #ffffff;
+  align-items: center;
+  text-align: center;
+}
+
+.form {
+  position: relative;
+  width: 50%;
+  height: 30%;
+  text-align: left;
+  overflow: hidden;
+  background-color: aqua;
+}
+
+.input {
+  width: 100%;
+  height: 100%;
+  padding-top: 14px;
+  border: none;
+  outline: none;
+}
+
+.label {
+  position: absolute;
+  bottom: 0px;
+  left: 0%;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  border-bottom: 1px solid #333333;
+}
+
+.label::after {
+  content: '';
+  left: 0px;
+  bottom: -2px;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  border-bottom: 3px solid #D91F27;
+  transform: translateX(-100%);
+  transition: all 0.5s ease;
+}
+
+.contentname {
+  position: absolute;
+  bottom: 2px;
+  transition: all 0.5s ease;
+}
+
+.input:focus + .label .contentname, .input:valid + .label .contentname {
+  transform: translateY(-80%);
+  color: #D91F27
+}
+
+.input:focus + .label::after, .input:valid + .label::after {
+  transform: translateX(0%);
+}
+
+.button {
   background-color: #333333;
   color: #F2F2F2;
-  width: 35%;
+  width: 150%;
   margin-top: 1em;
   padding: 8px 0px;
   font-size: 1em;
@@ -24,21 +91,9 @@
   border-radius: 20px;
 }
 
-.submit button:hover {
+.button:hover {
   color: #333333;
   background-color: #F2F2F2;
   border: 2px solid #D91F27;
-}
-
-.addteam {
-  width: 30%;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  padding: 10px 10px;
-  border-radius: 10px;
-  box-shadow: 0px 10px 200px #555;
-  background-color: #ffffff;
-  align-items: center;
-  text-align: center;
+  border-radius: 20px;
 }
