--- a/src/CSS Modules/aboutus.module.css
+++ b/src/CSS Modules/aboutus.module.css
@@ -4,6 +4,12 @@
   height: 100%;
 }
 
+.items {
+  align-items: center;
+  text-align: center;
+  padding-bottom: 2%;
+}
+
 .header {
   font-size: 50px;
   text-align: center;
@@ -41,4 +47,35 @@
   width: 50%;
   height: 50%;
   border-radius: 12px;
+}
+
+.mailing {
+  margin: auto;
+  background-color: #F2F2F2;
+  text-align: center;
+  width: 30%;
+  display: inline-block;
+  padding-top: 1%;
+  padding-right: 1%;
+  padding-left: 1%;
+  border-radius: 12px;
+}
+
+.button {
+  background-color: #333333;
+  color: #F2F2F2;
+  width: 70%;
+  padding: 2px 0px;
+  font-size: 1em;
+  font-weight: lighter;
+  letter-spacing: 1px;
+  margin-bottom: 1em;
+  border-radius: 20px;
+}
+
+.button:hover {
+  color: #333333;
+  background-color: #F2F2F2;
+  border: 2px solid #D91F27;
+  border-radius: 20px;
 }
