--- a/src/CSS Modules/admin.module.css
+++ b/src/CSS Modules/admin.module.css
@@ -11,6 +11,13 @@
   border-radius: 5px;
 }
 
+.roster {
+  width:50%;
+  background-color: blueviolet;
+  
+
+}
+
 .addteam {
   width: 30%;
   height: 20vh;
@@ -18,7 +25,7 @@
   display: flex;
   flex-direction: column;
   border-radius: 12px;
-  box-shadow: 0px 10px 200px #555;
+  box-shadow: 0px 10px 30px #555;
   background-color: #ffffff;
   align-items: center;
   text-align: center;
