--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   font-family: 'Open Sans Condensed', sans-serif;
   background: #D91F27;
   background-size: cover;
+  height: 100%;
 }
 
 .App ::selection {
