--- a/src/CSS Modules/admin.module.css
+++ b/src/CSS Modules/admin.module.css
@@ -1,3 +1,7 @@
+.body {
+  padding-bottom: 5vh;
+}
+
 .header {
   font-size: 50px;
   text-align: center;
@@ -34,7 +38,6 @@
   height: 30%;
   text-align: left;
   overflow: hidden;
-  background-color: aqua;
 }
 
 .input {
