--- a/src/CSS Modules/whatisultimate.module.css
+++ b/src/CSS Modules/whatisultimate.module.css
@@ -10,3 +10,75 @@
   border: 1px solid #333333;
   border-radius: 5px;
 }
+
+.boxline {
+  border: 1px solid #333333;
+  border-radius: 5px;
+}
+
+.info {
+  display: flex;
+  margin-bottom: 2vh;
+  justify-content: center;
+}
+
+.about {
+  width: 40%;
+  margin-left: 5%;
+  margin-right: 2.5%;
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  background-color: #f2f2f2;
+  border: 1px solid #333333;
+  border-radius: 5px;
+}
+
+.rules {
+  width: 40%;
+  margin-right: 5%;
+  margin-left: 2.5%;
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  background-color: #f2f2f2;
+  border: 1px solid #333333;
+  border-radius: 5px;
+}
+
+.moreinfo {
+  margin-top: 2%;
+}
+
+.linksheader {
+  text-align: center;
+  margin-top: 2.5%;
+}
+
+.linksheader h4 {
+  font-size: 40px;
+}
+
+.linkbody {
+  width: 40%;
+  margin-left: 2.5%;
+  margin-right: 2.5%;
+  padding-left: 2.5%;
+  padding-right: 2.5%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  background-color: #f2f2f2;
+  border: 1px solid #333333;
+  border-radius: 5px;
+}
+
+.linkbody h4 {
+  text-decoration: underline;
+}
+
+.links {
+  display: flex;
+  justify-content: space-around;
+}
