--- a/src/CSS Modules/aboutus.module.css
+++ b/src/CSS Modules/aboutus.module.css
@@ -3,6 +3,7 @@
   width: 100%;
   height: 100%;
   padding-bottom: 10vh;
+  text-align: center;
 }
 
 .items {
@@ -24,8 +25,8 @@
   border-radius: 5px;
 }
 
-.picdiv {
-  text-align: center;
+.info {
+  justify-content: space-around;
   display: flex;
   padding-left: 2%;
   padding-right: 2%;
@@ -35,9 +36,9 @@
   height: 50%;
   width: 50%;
   background-color: #F2F2F2;
-  padding-left: 1%;
-  padding-right: 1%;
+  margin-left: 2%;
   border-radius: 5px;
+  border: 1px solid #333333
 }
 
 .infodiv h3 {
@@ -45,21 +46,25 @@
 }
 
 .teampic {
-  width: 50%;
-  height: 50%;
+  width: 70%;
+  height: 100%;
+  margin-right: 2%;
   border-radius: 5px;
 }
 
 .mailing {
-  margin: auto;
   background-color: #F2F2F2;
-  text-align: center;
   width: 30%;
   display: inline-block;
-  padding-top: 1%;
-  padding-right: 1%;
-  padding-left: 1%;
   border-radius: 5px;
+}
+
+.text{
+  width: 100%;
+  height: 100%;
+  padding-top: 4%;
+  padding-right: 2%;
+  padding-left: 2%;
 }
 
 .button {
