--- a/src/CSS Modules/aboutus.module.css
+++ b/src/CSS Modules/aboutus.module.css
@@ -45,8 +45,12 @@
   text-decoration: underline;
 }
 
+.picdiv {
+  width: 50%;
+}
+
 .teampic {
-  width: 70%;
+  width: 100%;
   height: 100%;
   margin-right: 2%;
   border-radius: 5px;
@@ -57,6 +61,7 @@
   width: 30%;
   display: inline-block;
   border-radius: 5px;
+  margin-top: 2%;
 }
 
 .text{
