--- a/src/CSS Modules/admin.module.css
+++ b/src/CSS Modules/admin.module.css
@@ -8,6 +8,12 @@
   padding-top: .4cm;
 }
 
+.h3 {
+  font-size: 35px;
+  text-decoration: underline;
+  text-align: center;
+}
+
 .ul {
   list-style: none;
 }
