--- a/src/CSS Modules/admin.module.css
+++ b/src/CSS Modules/admin.module.css
@@ -26,7 +26,9 @@
 }
 
 .roster {
-  width:50%;
+  width: 46%;
+  margin: 2%;
+  border-radius: 5px;
   background-color: #ffffff;
 }
 
@@ -79,6 +81,14 @@
   border-bottom: 3px solid #D91F27;
   transform: translateX(-100%);
   transition: all 0.5s ease;
+}
+
+.player {
+  width: 96%;
+  margin: 2%;
+  display: flex;
+  overflow: auto;
+  height: 80vh;
 }
 
 .contentname {
