--- a/src/CSS Modules/admin.module.css
+++ b/src/CSS Modules/admin.module.css
@@ -32,6 +32,40 @@
   background-color: #ffffff;
 }
 
+.player {
+  width: 30%;
+  margin: 1%;
+  overflow: auto;
+  display: flex;
+  display: inline-block;
+  text-align: left;
+}
+
+.playerbox {
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  display: inline-block;
+}
+
+.playerbutton {
+  background-color: #333333;
+  color: #F2F2F2;
+  width: 20%;
+  font-size: 1em;
+  font-weight: lighter;
+  letter-spacing: 1px;
+  margin-bottom: 0.25em;
+  border-radius: 20px;
+}
+
+.playerbutton:hover {
+  color: #333333;
+  background-color: #F2F2F2;
+  border: 2px solid #D91F27;
+  border-radius: 20px;
+}
+
 .addteam {
   width: 30%;
   height: 20vh;
@@ -83,14 +117,6 @@
   transition: all 0.5s ease;
 }
 
-.player {
-  width: 96%;
-  margin: 2%;
-  display: flex;
-  overflow: auto;
-  height: 80vh;
-}
-
 .contentname {
   position: absolute;
   bottom: 2px;
@@ -104,24 +130,6 @@
 
 .input:focus + .label::after, .input:valid + .label::after {
   transform: translateX(0%);
-}
-
-.playerbutton {
-  background-color: #333333;
-  color: #F2F2F2;
-  width: 10%;
-  font-size: 1em;
-  font-weight: lighter;
-  letter-spacing: 1px;
-  margin-bottom: 0.25em;
-  border-radius: 20px;
-}
-
-.playerbutton:hover {
-  color: #333333;
-  background-color: #F2F2F2;
-  border: 2px solid #D91F27;
-  border-radius: 20px;
 }
 
 .button {
