--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   color: #333333;
   font-family: 'Open Sans Condensed', sans-serif;
-  background: #D91F27;
+  background: #ff3b30;
   background-size: cover;
   height: 100%;
 }
