--- a/src/CSS Modules/admin.module.css
+++ b/src/CSS Modules/admin.module.css
@@ -78,7 +78,7 @@
   flex-direction: column;
   border-radius: 12px;
   box-shadow: 0px 10px 30px #555;
-  background-color: #ffffff;
+  background-color: #f2f2f2;
   align-items: center;
   text-align: center;
 }
